--- a/ebook/ebookstore/templates/ebookstore/test.html
+++ b/ebook/ebookstore/templates/ebookstore/test.html
@@ -1,122 +1,115 @@
-{% extends "ebookstore/base.html" %}
-{% block title %}订单详情{% endblock %}
+{% extends "ebookstore/manage_base.html" %}
+{% block title %}修改书籍{% endblock %}
 {% block thirt %}
 {% endblock %}
 {% block body %}
-<div class="container">
-			<div style='width: 20px; border: 1px; float: left;'>
-				<!--这个div模拟一条白色的垂直分割线-->
-			</div>
-			<div id="second">
-				<div class="div-left" style="float: left; width: 166px;">
-					<div class="row" style="float: left; width: 1086px; margin: 0;">
-						<div class="panel panel-primary">
-							<div class="panel-heading">
-								<h3 class="panel-title">
-								<p class="text-center">≡≡≡订单信息≡≡≡</p>
-							</h3>
-							</div>
-							<div class="panel-body">
-								<!-- 购物车的表格 -->
-								<div style="margin-left: 15%">
-									<table>
-										<tr>
-											<th>订&emsp;&emsp;单&emsp;&emsp;号：</th>
-											<td><b>此处为订单号</b></td>
-										</tr>
-										<tr>
-											<th>用&emsp;&emsp;户&emsp;&emsp;名：</th>
-											<td><b>此处用户名</b></td>
-										</tr>
-										<tr>
-											<th>收&emsp;&emsp;货&emsp;&emsp;人：</th>
-											<td><b>此处收货人</b></td>
-										</tr>
-										<tr>
-											<th>收&emsp;货&emsp;地&emsp;址：</th>
-											<td><b>此处收货地址</b></td>
-										</tr>
-										<tr>
-											<th>收货人联系方式：</th>
-											<td><b>此处收货人联系方式</b></td>
-										</tr>
-										<tr>
-											<th>支&emsp;付&emsp;方&emsp;式：</th>
-											<td><b>此处支付方式</b></td>
-										</tr>
-										<tr>
-											<th>支&emsp;付&emsp;状&emsp;态：</th>
-											<td><b>此处支付状态</b></td>
-										</tr>
-										<tr>
-											<th>总&emsp;&emsp;金&emsp;&emsp;额：</th>
-											<td><b>此处总金额</b></td>
-										</tr>
-									</table>
-								</div>
-								<div class="row-fluid" style="width: 70%;margin: 0 auto;" >
-						            <!-- block -->
-						            <div class="block">
-						                <div class="navbar navbar-inner block-header">
-						                    <div class="muted pull-left">订单书籍信息</div>
-						                </div>
-						                <div class="block-content collapse in">
-						                    <div class="span12">
-												<table class="table table-striped" style="margin: auto;">
-									              <thead>
-									                <tr>
-									                  <th style="width: 50px;">ISBN</th>
-									                  <th style="width: 300px;">书名</th>
-									                  <th style="width: 300px;">出版社</th>
-									                  <th style="width: 100px;">作者</th>
-									                  <th style="width: 100px;">数量</th>
-									                  <th style="width: 140px;">单价</th>
-									                  <th style="width: 140px;">金额</th>
-									                </tr>
-									              </thead>
-									              <tbody>
-									                <tr id="tr1">
-									                  <td>1</td>
-									                  <td>加密和解密</td>
-									                  <td>Otto</td>
-									                  <td>@mdo</td>
-									                  <td>20</td>
-									                  <td>**</td>
-									                  <td>**</td>
-									                </tr>
-									                <tr>
-									                  <td>2</td>
-									                  <td>数据库</td>
-									                  <td>Thornton</td>
-									                  <td>@fat</td>
-									                  <td>20</td>
-									                  <td>**</td>
-									                  <td>**</td>
-									                </tr>
-									                <tr>
-									                  <td>3</td>
-									                  <td>Larry</td>
-									                  <td>the Bird</td>
-									                  <td>@twitter</td>
-									                  <td>30</td>
-									                  <td>**</td>
-									                  <td>**</td>
-									                </tr>
-									              </tbody>
-									            </table>
-						                    </div>
-						                </div>
-						            </div>
-						            <!-- /block -->
-						       </div>
-						       <a class="btn btn-info pull-right" href="order-manage.html" role="button" style="width:100px;height:30px">返回</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+<div class="row-fluid" style="width: 70%; margin:0 auto ;">
+            <!-- block -->
+            <div class="block">
+                <div class="navbar navbar-inner block-header">
+                    <div class="muted pull-left">修改书籍</div>
+                </div>
+                <div class="block-content collapse in">
+                    <div class="span12">
+                        <form class="form-horizontal">
+                            <div class="control-group">
+                              <label class="control-label">书名</label>
+                              <div class="controls">
+                                <span class="input-xlarge uneditable-input">此处为书名</span>
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label">ISBN</label>
+                              <div class="controls">
+                                <span class="input-xlarge uneditable-input">此处为ISBN</span>
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="typeahead">作者 </label>
+                              <div class="controls">
+                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="typeahead">出版社 </label>
+                              <div class="controls">
+                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="date01">出版日期</label>
+                              <div class="controls">
+                                <input type="text" class="input-xlarge datepicker" id="date01" >
+                             </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="select01">类别</label>
+                              <div class="controls">
+                                <select id="select01" class="chzn-select">
+                                  <option>英语类</option>
+                                  <option>计算机类</option>
+                                </select>
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="typeahead">库存 </label>
+                              <div class="controls">
+                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
+                              </div>
+                            </div>
+        					<div class="control-group">
+                              <label class="control-label" for="typeahead">售价 </label>
+                              <div class="controls">
+                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="typeahead">成本价 </label>
+                              <div class="controls">
+                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="fileInput">封面</label>
+                              <div class="controls">
+                                <input class="input-file uniform_on" id="fileInput" type="file">
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="textarea2">简介</label>
+                              <div class="controls">
+                                <textarea class="input-xlarge textarea" placeholder="Enter text ..." style="width: 810px; height: 200px"></textarea>
+                              </div>
+                            </div>
+                            <div class="form-actions">
+                              <button type="submit" class="btn btn-primary">保存</button>
+                              <button type="reset" class="btn">取消</button>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+            <!-- /block -->
+        </div>
 {% endblock %}
 {% block js %}
+        <script type="text/javascript" src="/static/ebookstore/jquery.js"></script>
+        <script type="text/javascript" src="/static/ebookstore/bootstrap.min.js"></script>
+        <script>
 
+	jQuery(document).ready(function() {
+	   FormValidation.init();
+	});
+
+
+        $(function() {
+            $(".datepicker").datepicker();
+            $(".uniform_on").uniform();
+            $(".chzn-select").chosen();
+            $('.textarea').wysihtml5();
+
+
+        });
+        </script>
 {% endblock %}
