--- a/ebook/ebookstore/templates/ebookstore/Login.html
+++ b/ebook/ebookstore/templates/ebookstore/Login.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="btn-group" role="group">
 					<button id="loginbutton" class="btn btn-success" style="width:100px;height:30px">登录</button>
-					<a class="btn btn-primary" href="Register.html" role="button" style="width:100px;height:30px">注册</a>
+					<a class="btn btn-primary" href="/ebookstore/register" role="button" style="width:100px;height:30px">注册</a>
 				</div>
 
 			</div>
